api: allow wildcard recursive deletion of files
