# docs/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "description": "Submit and manage workflows",
     "title": "REANA Workflow Controller",
-    "version": "0.1"
+    "version": "0.5.0.dev20181120"
   },
   "parameters": {},
   "paths": {
@@ -800,6 +800,61 @@
       }
     },
     "/api/workflows/{workflow_id_or_name}/workspace/{file_name}": {
+      "delete": {
+        "description": "This resource is expecting a workflow UUID and a filename existing inside the workspace to be deleted.",
+        "operationId": "delete_file",
+        "parameters": [
+          {
+            "description": "Required. UUID of workflow owner.",
+            "in": "query",
+            "name": "user",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "Required. Workflow UUID or name",
+            "in": "path",
+            "name": "workflow_id_or_name",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "Required. Name (or path) of the file to be deleted.",
+            "in": "path",
+            "name": "file_name",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Requests succeeded. The file has been downloaded.",
+            "schema": {
+              "type": "file"
+            }
+          },
+          "404": {
+            "description": "Request failed. `file_name` does not exist.",
+            "examples": {
+              "application/json": {
+                "message": "input.csv does not exist"
+              }
+            }
+          },
+          "500": {
+            "description": "Request failed. Internal controller error.",
+            "examples": {
+              "application/json": {
+                "message": "Internal workflow controller error."
+              }
+            }
+          }
+        },
+        "summary": "Delete the specified file."
+      },
       "get": {
         "description": "This resource is expecting a workflow UUID and a filename existing inside the workspace to return its content.",
         "operationId": "download_file",
